<resources>
    <string name="app_name">AppleStore</string>
    <string name="new_born">New Born</string>
    <string name="men">Men</string>
    <string name="Women">Women</string>
    <string name="Kids">Kids</string>
    <string name="price">Price: </string>
    <string name="material">Material: </string>
    <string name="size">Available sizes: </string>
    <string name="colors">Available colors: </string>
    <string name="age">Age: </string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_already_have_account">Already have account</string>
    <string name="button_sign_in">Sign in</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>

    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>

    <string-array name="kids_sub_categories">
        <item>T-shirts</item>
        <item>Shorts</item>
        <item>Jeans</item>
    </string-array>

    <string-array name="newborn_sub_categories">
        <item>T-shirts</item>
        <item>Shorts</item>
    </string-array>

    <string-array name="men_sub_categories">
        <item>T-shirts</item>
        <item>Shorts</item>
        <item>Jeans</item>
    </string-array>

    <string-array name="women_sub_categories">
        <item>T-shirts</item>
        <item>Dress</item>
        <item>Skirt</item>
    </string-array>
    <string name="title_activity_cart">Cart</string>
    <string name="action_settings">Settings</string>

</resources>
