<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".productdetails.ProductDetails">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="@dimen/padding_main_categories"
                android:text="@string/colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/colors_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

            <LinearLayout
                android:padding="@dimen/padding_main_categories"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:padding="@dimen/padding_main_categories"
                android:text="@string/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/sizes_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

            <LinearLayout
                android:padding="@dimen/padding_main_categories"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:padding="@dimen/padding_main_categories"
        android:background="@color/red"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/white"
            android:paddingLeft="@dimen/padding_main_categories"
            android:textSize="@dimen/price_text_size"
            android:layout_weight="1"
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:textColor="@color/red"
            android:background="@color/white"
            android:layout_weight="1"
            android:padding="@dimen/padding_main_categories"
            android:text="@string/add_to_cart"
            android:id="@+id/add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
